--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
+								<li><a href="elements.html">Biography</a></li>
 								<li><a href="https://www.linkedin.com/in/alastairthomson194/">Linkedin</a></li>
 								<li><a href="https://github.com/Thomsoa194">GitHub</a></li>
 							</ul>
@@ -56,7 +57,7 @@
 									<a href="https://github.com/Thomsoa194/PortfolioProjects/blob/main/Cleaned_Housing_data.sql" class="image"><img src="images/housing.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Data Cleaning in SQL</h2>
-										<p>In this project, I cleaned Housing data in SQLite</p>
+										<p>In this project, I cleaned Housing data in SQLite. This included filling in null values, splitting columns into appropriate sub-columns, removing duplicates as well as obsolete columns.</p>
 										<a href="https://github.com/Thomsoa194/PortfolioProjects/blob/main/Cleaned_Housing_data.sql" class="special">View Project</a>
 									</div>
 								</div>
@@ -68,7 +69,7 @@
 									<a href="https://github.com/Thomsoa194/PortfolioProjects/blob/main/COVID%20Portolio%20Project%20github.sql" class="image"><img src="images/covid.jpeg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Data Exploration in SQL</h2>
-										<p>Data Exploration of COVID-19 dataset in SQL. </p>
+										<p>In this project, I used a vast dataset which updates daily. The dataset was provided by Our World In Data and can be found by clicking <a href="https://ourworldindata.org/covid-deaths">here.</a> I looked at particular features of the data to determine proportion of the countries that got the virus, calculating infection rates, looking at infection rates per continent as well as working with time series data. I also looked in detail at vaccination rates. My visualizations for this project can be found in my Tableau public page below. </p>
 										<a href="https://github.com/Thomsoa194/PortfolioProjects/blob/main/COVID%20Portolio%20Project%20github.sql" class="special">View Project</a>
 									</div>
 								</div>
