--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="elements.html">Biography</a></li>
+								<li><a href="projects.html">More Projects</a></li>
 								<li><a href="https://www.linkedin.com/in/alastairthomson194/">Linkedin</a></li>
 								<li><a href="https://github.com/Thomsoa194">GitHub</a></li>
 							</ul>
@@ -125,7 +126,7 @@
 										</article>
 									</section>
 									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
+										<li><a href="projects.html" class="button">Browse All</a></li>
 									</ul>
 								</div>
 							</section>
